# myalicia

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT_SETUP.md  LICENSE  PUBLISHING.md  README.md  REFACTORING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: awareness_primitive.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  FAQ.md  PAPERS.md  PHILOSOPHY.md  QUICKSTART.md
examples/archetypes/: ariadne.yaml  curious-builder.yaml  patient-mentor.yaml
examples/memory_seeds/: MEMORY.md  preferences.md
examples/vault_layouts/: obsidian-default.md
myalicia/: __init__.py  alicia.py  cli.py  config.py  defaults.yaml
myalicia/core/: __init__.py  handle_message.py  intents.py  main.py  scheduler.py  security.py  system_prompt.py  telegram_commands.py  telegram_safety.py  vault_io.py  voice.py
myalicia/skills/: __init__.py  afterglow.py  agent_triggers.py  analysis_briefing.py  analysis_contradiction.py  analysis_coordination.py  analysis_dialogue_depth.py  analysis_growth_edge.py  analysis_temporal.py  autonomy.py  bridge_protocol.py  bridge_schema.py  bridge_state.py  circulation_composer.py  constitution.py  context_resolver.py  contradiction_detector.py  conversation_mode.py  conversations.py  curiosity_engine.py  daily_signal.py  dimension_research.py  drawing_skill.py  effectiveness_dashboard.py  emergent_themes.py  emotion_model.py  episode_scorer.py  feedback_loop.py  gmail_skill.py  graph_intelligence.py  hector_model.py  inner_life.py  loops_dashboard.py  memory_audit.py  (+48 more)
tests/: TEST_REPORT.md  __init__.py  conftest.py  smoke_test.py  test_circulation_composer.py  test_contradiction_detector.py  test_conversations.py  test_dimension_research.py  test_effectiveness_dashboard.py  test_emergent_themes.py  test_hector_model.py  test_integration_flows.py  test_live_smoke.py  test_lived_feedback.py  test_loops_dashboard.py  test_markdown_safety.py  test_memory_system.py  test_meta_synthesis.py  test_multi_channel.py  test_multichannel_dashboard.py  test_practice_runner.py  test_proactive_messages.py  test_reflexion_and_metacog.py  test_response_capture.py  test_season_dashboard.py  test_security_and_routing.py  test_synthesis_finalizer_invariant.py  test_thread_puller.py  test_tool_router.py  test_user_model.py  test_vault_operations.py  test_voice_pipeline.py  test_web_dashboard.py  test_wisdom_dashboard.py  trigger_all.py  trigger_results.json
(+8 files in other folders)
